implementing the search component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,24 +1,3 @@
-<div class="bg-black text-white font-outfit h-screen">
-  <div class="p-6">
-    <!-- Heading (L) -->
-    <h1 class="text-heading-l mb-4">Heading (L) - Outfit Light - 32px</h1>
-
-    <!-- Body (M) -->
-    <p class="text-body-m mb-4">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh. Nullam mollis. Ut justo. Suspendisse potenti.</p>
-
-    <!-- Heading (M) -->
-    <h2 class="text-heading-m mb-4">Heading (M) - Outfit Light - 24px</h2>
-
-    <!-- Heading (S) -->
-    <h3 class="text-heading-s mb-4">Heading (S) - Outfit Medium - 24px</h3>
-
-    <!-- Body (S) -->
-    <p class="text-body-s mb-4">Donec odio quisque volutpat mattis eros.</p>
-
-    <!-- Heading (XS) -->
-    <h4 class="text-heading-xs mb-4">Heading (XS) - Outfit Medium - 18px</h4>
-
-    <!-- Additional Text -->
-    <p class="text-body-s mb-4">Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh. Nullam mollis. Ut justo. Suspendisse potenti. Nullam malesuada erat ut turpis.</p>
-  </div>
+<div class="bg-dark-blue text-white font-outfit h-screen p-6">
+  <app-search></app-search>
 </div>
