--- a/src/app/components/bookmark/bookmark.component.html
+++ b/src/app/components/bookmark/bookmark.component.html
@@ -1,8 +1,8 @@
 <!-- bookmark.component.html -->
 <div *ngIf="firstMediaItem$ | async as mediaItems">
-  <div *ngIf="mediaItems.length > 0">
+  <div *ngIf="mediaItems.length > 0" class="flex flex-col gap-[10px]">
     <div
-      class="bookmark-thumbnail w-[164px] h-[110px] bg-cover bg-center rounded-lg"
+      class="bookmark-thumbnail w-[164px] h-[110px] p-2 md:p-4 md:w-[220px] md:h-[140px] lg:w-[280px] lg:h-[174px] bg-cover bg-center rounded-lg flex justify-end"
       [ngStyle]="{
         'background-image': getResponsiveBackgroundImage(
           mediaItems[0].thumbnail
@@ -10,11 +10,57 @@
       }"
       aria-label="First media item background"
     >
-      <!-- Optional content, like title and details -->
-      <h2 class="text-white text-lg">{{ mediaItems[0].title }}</h2>
-      <p class="text-white">
-        {{ mediaItems[0].year }} - {{ mediaItems[0].category }}
-      </p>
+      <div
+        class="w-8 h-8 bg-dark-blue rounded-full opacity-50 flex items-center justify-center cursor-pointer"
+        (click)="toggleBookmark()"
+      >
+        <!-- svgs for the bookmarks -->
+        <img
+          *ngIf="!mediaItems[0]?.isBookmarked"
+          src="assets/icon-bookmark-empty.svg"
+          alt="icon-bookmark-empty"
+        />
+        <img
+          *ngIf="mediaItems[0]?.isBookmarked"
+          src="assets/icon-bookmark-full.svg"
+          alt="icon-bookmark-full"
+        />
+      </div>
+    </div>
+    <div class="flex flex-col gap-[6px]">
+      <div class="flex items-center gap-[7px]">
+        <p class="text-[11px] md:text-xs text-pure-white text-opacity-75">
+          2019
+        </p>
+        <div class="flex items-center gap-[6px]">
+          <div
+            class="w-[3px] h-[3px] bg-pure-white bg-opacity-45 rounded-full"
+          ></div>
+          <div class="flex items-center gap-1">
+            <img
+              src="assets/icon-category-movie.svg"
+              class="w-[10px] h-[10px] md:w-[12px] md:h-[12px]"
+              alt="icon-category-movie"
+            />
+            <p class="text-[11px] md:text-xs text-pure-white text-opacity-75">
+              Movie
+            </p>
+          </div>
+        </div>
+        <div class="flex items-center gap-[6px]">
+          <div
+            class="w-[3px] h-[3px] bg-pure-white bg-opacity-45 rounded-full"
+          ></div>
+          <p class="text-[11px] md:text-xs text-pure-white text-opacity-75">
+            E
+          </p>
+        </div>
+      </div>
+      <div>
+        <p class="text-[14px] md:text-heading-xs font-medium text-pure-white">
+          Lone Heart
+        </p>
+      </div>
     </div>
   </div>
 </div>
