--- a/src/app/components/bookmark/bookmark.component.html
+++ b/src/app/components/bookmark/bookmark.component.html
@@ -2,7 +2,11 @@
 <div *ngIf="firstMediaItem$ | async as mediaItems">
   <div *ngIf="mediaItems.length > 0" class="flex flex-col gap-[10px]">
     <div
-      class="bookmark-thumbnail w-[164px] h-[110px] p-2 md:p-4 md:w-[220px] md:h-[140px] lg:w-[280px] lg:h-[174px] bg-cover bg-center rounded-lg flex justify-end"
+      class="bookmark-thumbnail bg-cover bg-center rounded-lg relative"
+      [ngClass]="{
+        'w-[240px] h-[140px] md:w-[470px] md:h-[230px] p-[8px] md:p-0 md:px-[24px] md:py-[16px]': isTrending,
+        'w-[164px] h-[110px] md:w-[220px] md:h-[140px] lg:w-[280px] lg:h-[174px] p-2 md:p-4': !isTrending,
+      }"
       [ngStyle]="{
         'background-image': getResponsiveBackgroundImage(
           mediaItems[0].thumbnail
@@ -10,24 +14,72 @@
       }"
       aria-label="First media item background"
     >
+      <!-- div for toggling bookmarked movie -->
+      <div class="flex items-center justify-end">
+        <div
+          class="w-8 h-8 bg-dark-blue rounded-full opacity-50 flex items-center justify-center cursor-pointer"
+          (click)="toggleBookmark()"
+        >
+          <!-- svgs for the bookmarks -->
+          <img
+            *ngIf="!mediaItems[0]?.isBookmarked"
+            src="assets/icon-bookmark-empty.svg"
+            alt="icon-bookmark-empty"
+          />
+          <img
+            *ngIf="mediaItems[0]?.isBookmarked"
+            src="assets/icon-bookmark-full.svg"
+            alt="icon-bookmark-full"
+          />
+        </div>
+      </div>
+      <!-- div for showing the movie details -->
       <div
-        class="w-8 h-8 bg-dark-blue rounded-full opacity-50 flex items-center justify-center cursor-pointer"
-        (click)="toggleBookmark()"
+        class="bg-gradient-to-b from-[rgba(255,255,255,0)] to-[rgba(0,0,0,0.75)] h-[50%] w-full absolute left-0 bottom-[0%] flex-grow flex items-end z-20 p-4 md:p-6"
+        *ngIf="isTrending"
       >
-        <!-- svgs for the bookmarks -->
-        <img
-          *ngIf="!mediaItems[0]?.isBookmarked"
-          src="assets/icon-bookmark-empty.svg"
-          alt="icon-bookmark-empty"
-        />
-        <img
-          *ngIf="mediaItems[0]?.isBookmarked"
-          src="assets/icon-bookmark-full.svg"
-          alt="icon-bookmark-full"
-        />
+        <div class="flex flex-col gap-[6px]">
+          <div class="flex items-center gap-[7px]">
+            <p class="text-[11px] md:text-xs text-pure-white text-opacity-75">
+              2019
+            </p>
+            <div class="flex items-center gap-[6px]">
+              <div
+                class="w-[3px] h-[3px] bg-pure-white bg-opacity-45 rounded-full"
+              ></div>
+              <div class="flex items-center gap-1">
+                <img
+                  src="assets/icon-category-movie.svg"
+                  class="w-[10px] h-[10px] md:w-[12px] md:h-[12px]"
+                  alt="icon-category-movie"
+                />
+                <p
+                  class="text-[11px] md:text-xs text-pure-white text-opacity-75"
+                >
+                  Movie
+                </p>
+              </div>
+            </div>
+            <div class="flex items-center gap-[6px]">
+              <div
+                class="w-[3px] h-[3px] bg-pure-white bg-opacity-45 rounded-full"
+              ></div>
+              <p class="text-[11px] md:text-xs text-pure-white text-opacity-75">
+                E
+              </p>
+            </div>
+          </div>
+          <div>
+            <p
+              class="text-[14px] md:text-heading-xs font-medium text-pure-white cursor-pointer"
+            >
+              Lone Heart
+            </p>
+          </div>
+        </div>
       </div>
     </div>
-    <div class="flex flex-col gap-[6px]">
+    <div class="flex flex-col gap-[6px]" *ngIf="!isTrending">
       <div class="flex items-center gap-[7px]">
         <p class="text-[11px] md:text-xs text-pure-white text-opacity-75">
           2019
