--- a/src/app/components/bookmark/bookmark.component.html
+++ b/src/app/components/bookmark/bookmark.component.html
@@ -94,7 +94,7 @@
       </div>
       <!-- div to be shown when isHovered is true -->
       <div
-        class="w-full h-full absolute top-0 left-0 rounded-lg flex items-center justify-center"
+        class="w-full h-full absolute top-0 left-0 rounded-lg flex items-center justify-center transition ease-in duration-300"
         [ngClass]="{'bg-black bg-opacity-50': isHovered}"
       >
         <div
@@ -110,6 +110,7 @@
         </div>
       </div>
     </div>
+    <!-- div to be shown when isTrending is true -->
     <div class="flex flex-col gap-[6px]" *ngIf="!isTrending">
       <div class="flex items-center gap-[7px]">
         <p class="text-[11px] md:text-xs text-pure-white text-opacity-75">
