making folder structure for the application

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<div class="bg-dark-blue text-white font-outfit flex flex-col gap-4 h-screen p-6">
+<div
+  class="bg-dark-blue text-white font-outfit flex flex-col gap-4 h-screen p-6"
+>
   <app-search></app-search>
   <app-input></app-input>
   <app-button></app-button>
