--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,5 @@
 <div
   class="bg-dark-blue text-white font-outfit flex flex-col gap-4 h-screen p-6"
 >
-  <app-search></app-search>
-  <app-input></app-input>
-  <app-button></app-button>
-  <app-bookmark></app-bookmark>
+  <router-outlet></router-outlet>
 </div>
