--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,3 @@
-<div
-  class="bg-dark-blue text-white font-outfit flex flex-col gap-4 h-screen p-6"
->
+<div class="bg-dark-blue text-white font-outfit min-h-screen">
   <router-outlet></router-outlet>
 </div>
