--- a/src/app/components/button/button.component.html
+++ b/src/app/components/button/button.component.html
@@ -1,3 +1,3 @@
 <div class="py-[14px] md:px-[96px] bg-red flex items-center justify-center hover:bg-pure-white hover:text-semi-dark-blue rounded-md cursor-pointer transition ease-out duration-200">
-    <p class="text-body-m">Login to your account</p>
+    <p class="text-body-m">{{text}}</p>
 </div>
