making the input component accept the control and error displaying

--- a/src/app/components/input/input.component.html
+++ b/src/app/components/input/input.component.html
@@ -1,14 +1,19 @@
 <div
   class="h-[37px] pb-[4px] border-b-[1px] border-graish-blue pt-1 w-full flex pl-4"
-  [ngClass]="{ 'border-pure-white': isTyping, 'border-red': isErrored }"
+  [ngClass]="{ 'border-pure-white': isTyping, 'border-red': isErrored() }"
 >
   <input
     class="text-pure-white w-[60%] text-body-m md: font-light outline-none border-none bg-transparent focus:caret-red"
-    placeholder="{{placeholder}}"
+    [placeholder]="placeholder"
+    [formControl]="control"
     (blur)="isTypingOutput()"
     (focus)="isTypingInput()"
+    (input)="onInput($event)"
   />
-  <div class="flex flex-col justify-center items-end w-[40%]" *ngIf="isErrored">
+  <div
+    class="flex flex-col justify-center items-end w-[40%]"
+    *ngIf="isErrored()"
+  >
     <p class="text-body-s text-red leading-[0px]">Can’t be empty</p>
   </div>
 </div>
