--- a/src/app/components/input/input.component.html
+++ b/src/app/components/input/input.component.html
@@ -1,6 +1,6 @@
 <div
   class="h-[37px] pb-[4px] border-b-[1px] border-graish-blue pt-1 w-full flex pl-4"
-  [ngClass]="{ 'border-pure-white': isTyping, 'border-red': isErrored() }"
+  [ngClass]="{ 'border-pure-white': isTyping, 'border-red': isErrored }"
 >
   <input
     class="text-pure-white w-[60%] text-body-m md: font-light outline-none border-none bg-transparent focus:caret-red"
@@ -9,10 +9,11 @@
     (blur)="isTypingOutput()"
     (focus)="isTypingInput()"
     (input)="onInput($event)"
+    type="{{ type }}"
   />
   <div
     class="flex flex-col justify-center items-end w-[40%]"
-    *ngIf="isErrored()"
+    *ngIf="isErrored"
   >
     <p class="text-body-s text-red leading-[0px]">Can’t be empty</p>
   </div>
