--- a/src/app/pages/auth-pages/signup/signup.component.html
+++ b/src/app/pages/auth-pages/signup/signup.component.html
@@ -8,26 +8,46 @@
     class="w-[90%] md:w-[400px] mx-auto bg-semi-dark-blue rounded-[10px] px-6 pt-6 pb-[32px] md:p-[32px] flex flex-col gap-10"
   >
     <p class="text-heading-l text-pure-white">Sign Up</p>
-    <div class="flex flex-col gap-6">
-      <app-input [placeholder]="'Email address'"></app-input>
-      <app-input [placeholder]="'Password'"></app-input>
-      <app-input [placeholder]="'Repeat password'"></app-input>
-    </div>
-    <div class="flex flex-col gap-6">
-      <app-button [text]="'Create an account'"></app-button>
-      <div class="flex items-center justify-center gap-[10px]">
-        <div>
-          <p class="text-body-m text-pure-white">Already have an account?</p>
-        </div>
-        <div>
-          <a
-            [routerLink]="['/login']"
-            class="text-body-m text-red cursor-pointer"
-          >
-            Login
-          </a>
+    <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
+      <div class="flex flex-col gap-6">
+        <app-input
+          [placeholder]="'Email address'"
+          [control]="emailControl"
+          [isErrored]="!!(emailControl.invalid && emailControl.touched)"
+        ></app-input>
+        <app-input
+          [placeholder]="'Password'"
+          [control]="passwordControl"
+          [type]="'password'"
+          [isErrored]="!!(passwordControl.invalid && passwordControl.touched)"
+        ></app-input>
+        <app-input
+          [placeholder]="'Repeat password'"
+          [control]="repeatPasswordControl"
+          [type]="'password'"
+          [isErrored]="
+            !!(repeatPasswordControl.invalid && repeatPasswordControl.touched)
+          "
+        ></app-input>
+      </div>
+      <div class="flex flex-col gap-6 mt-6">
+        <button type="submit" class="btn btn-primary w-full">
+          Create an account
+        </button>
+        <div class="flex items-center justify-center gap-[10px]">
+          <div>
+            <p class="text-body-m text-pure-white">Already have an account?</p>
+          </div>
+          <div>
+            <a
+              [routerLink]="['/login']"
+              class="text-body-m text-red cursor-pointer"
+            >
+              Login
+            </a>
+          </div>
         </div>
       </div>
-    </div>
+    </form>
   </div>
 </div>
