changing the signup button

--- a/src/app/pages/auth-pages/signup/signup.component.html
+++ b/src/app/pages/auth-pages/signup/signup.component.html
@@ -33,7 +33,7 @@
 
       <div class="flex flex-col gap-6 mt-6">
         <button type="submit">
-          <app-button [text]="'Login to your account'"></app-button>
+          <app-button [text]="'Create an account'"></app-button>
         </button>
         <div class="flex items-center justify-center gap-[10px]">
           <div>
