adding the toastr to show the error and succuss to the user upon logging in or signup

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap");
-
+@import 'ngx-toastr/toastr';
 * {
   font-family: "Outfit", sans-serif;
   font-optical-sizing: auto;
