working on the layout

--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,4 +1,4 @@
-<div class="flex items-center gap-4 h-[32px]">
+<div class="flex items-center gap-4 h-[32px] bg-dark-blue">
   <div class="pb-2 md:pb-0">
     <img
       src="assets/icon-search.svg"
