--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,1 +1,125 @@
-<p>layout works!</p>
+<!-- <app-navigation></app-navigation> -->
+<div class="flex flex-col lg:flex-row w-full min-h-screen relative md:p-[25px]">
+    <!-- navigation for desktop and nav header for mobile -->
+    <div
+      class="p-4 md:p-[27px] lg:w-[80px] bg-semi-dark-blue flex lg:flex-col items-center justify-between absolute md:relative md:rounded-[10px] top-0 left-0 w-full z-10"
+    >
+      <div>
+        <img
+          src="assets/logo.svg"
+          class="w-[25px] h-5 md:w-8 md:h-[25px]"
+          alt="logo"
+        />
+      </div>
+      <div
+        class="flex items-center lg:flex-col gap-6 md:gap-8 lg:gap-10 lg:absolute lg:top-[136px]"
+      >
+        <img
+          src="assets/icon-nav-home.svg"
+          class="w-[16px] h-4 md:w-5 md:h-[20px]"
+          alt="icon-nav-home"
+        />
+        <img
+          src="assets/icon-nav-movies.svg"
+          class="w-[16px] h-4 md:w-5 md:h-[20px]"
+          alt="icon-nav-movies"
+        />
+        <img
+          src="assets/icon-nav-tv-series.svg"
+          class="w-[16px] h-4 md:w-5 md:h-[20px]"
+          alt="icon-nav-tv-series"
+        />
+        <img
+          src="assets/icon-nav-bookmark.svg"
+          class="w-[13px] h-4 md:w-4 md:h-[20px]"
+          alt="icon-nav-bookmark"
+        />
+      </div>
+      <div class="w-6 h-6 rounded-full p-[2px] bg-pure-white">
+        <img
+          src="assets/image-avatar.png"
+          class="w-full h-full"
+          alt="image-avatar"
+        />
+      </div>
+    </div>
+  
+    <!-- main content -->
+    <div
+      class="px-4 mt-[80px] lg:mt-0 md:mt-[33px] lg:flex-1 lg:max-h-[calc(100vh-50px)] lg:overflow-y-auto"
+    >
+      <!-- main header search -->
+      <div class="sticky top-[0px] z-20 pb-2">
+        <app-search></app-search>
+      </div>
+  
+      <!-- main header features -->
+      <div>
+        <p class="text-white">Omar</p>
+        <p class="text-white">Main</p>
+        <p class="text-white">Main</p>
+        <p class="text-white">Main</p>
+        <p class="text-white">Main</p>
+        <p class="text-white">Main</p>
+        <p class="text-white">Main</p>
+        <p class="text-white">Main</p>
+        <p class="text-white">Main</p>
+        <p class="text-white">Main</p>
+        <p class="text-white">Main</p>
+        <p class="text-white">Main</p>
+        <p class="text-white">Main</p>
+        <p class="text-white">Main</p>
+        <p class="text-white">Main</p>
+        <p class="text-white">Main</p>
+        <p class="text-white">Main</p>
+        <p class="text-white">Main</p>
+        <p class="text-white">Main</p>
+        <p class="text-white">Main</p>
+        <p class="text-white">Main</p>
+        <p class="text-white">Main</p>
+        <p class="text-white">Main</p>
+        <p class="text-white">Main</p>
+        <p class="text-white">Main</p>
+        <p class="text-white">Main</p>
+        <p class="text-white">Main</p>
+        <p class="text-white">Main</p>
+        <p class="text-white">Main</p>
+        <p class="text-white">Main</p>
+        <p class="text-white">Main</p>
+        <p class="text-white">Main</p>
+        <p class="text-white">Main</p>
+        <p class="text-white">Main</p>
+        <p class="text-white">Main</p>
+        <p class="text-white">Main</p>
+        <p class="text-white">Main</p>
+        <p class="text-white">Main</p>
+        <p class="text-white">Main</p>
+        <p class="text-white">Main</p>
+        <p class="text-white">Main</p>
+        <p class="text-white">Main</p>
+        <p class="text-white">Main</p>
+        <p class="text-white">Main</p>
+        <p class="text-white">Main</p>
+        <p class="text-white">Main</p>
+        <p class="text-white">Main</p>
+        <p class="text-white">Main</p>
+        <p class="text-white">Main</p>
+        <p class="text-white">Main</p>
+        <p class="text-white">Main</p>
+        <p class="text-white">Main</p>
+        <p class="text-white">Main</p>
+        <p class="text-white">Main</p>
+        <p class="text-white">Main</p>
+        <p class="text-white">Main</p>
+        <p class="text-white">Main</p>
+        <p class="text-white">Main</p>
+        <p class="text-white">Main</p>
+        <p class="text-white">Main</p>
+        <p class="text-white">Main</p>
+        <p class="text-white">Main</p>
+        <p class="text-white">Main</p>
+        <!-- Add more content here to test the scroll behavior -->
+      </div>
+    </div>
+  </div>
+  
