--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,8 +1,7 @@
-<!-- <app-navigation></app-navigation> -->
 <div class="flex flex-col lg:flex-row w-full min-h-screen relative md:p-[25px]">
     <!-- navigation for desktop and nav header for mobile -->
     <div
-      class="p-4 md:p-[27px] lg:w-[80px] bg-semi-dark-blue flex lg:flex-col items-center justify-between absolute md:relative md:rounded-[10px] top-0 left-0 w-full z-10"
+      class="p-4 md:p-[27px] lg:w-[80px] bg-semi-dark-blue flex lg:flex-col items-center justify-between sticky md:rounded-[10px] top-0 left-0 w-full z-10"
     >
       <div>
         <img
@@ -46,10 +45,10 @@
   
     <!-- main content -->
     <div
-      class="px-4 mt-[80px] lg:mt-0 md:mt-[33px] lg:flex-1 lg:max-h-[calc(100vh-50px)] lg:overflow-y-auto"
+      class="px-4 mt-[10px] lg:mt-0 md:mt-[33px] lg:flex-1 lg:max-h-[calc(100vh-50px)] lg:overflow-y-auto"
     >
       <!-- main header search -->
-      <div class="sticky top-[0px] z-20 pb-2">
+      <div class="sticky top-[55px] md:top-[78px] lg:top-[-1px] z-20">
         <app-search></app-search>
       </div>
   
