customizing the scroll

--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -45,7 +45,7 @@
   
     <!-- main content -->
     <div
-      class="px-4 mt-[10px] lg:mt-0 md:mt-[33px] lg:flex-1 lg:max-h-[calc(100vh-50px)] lg:overflow-y-auto"
+      class="px-4 mt-[10px] lg:mt-0 md:mt-[33px] lg:flex-1 lg:max-h-[calc(100vh-50px)] lg:overflow-y-auto custom-scroll"
     >
       <!-- main header search -->
       <div class="sticky top-[55px] md:top-[78px] lg:top-[-1px] z-20">
