ft: implementing the home component with the data from main component, but it's just implementation, no logic

--- a/src/app/components/bookmark/bookmark.component.html
+++ b/src/app/components/bookmark/bookmark.component.html
@@ -12,7 +12,7 @@
       aria-label="First media item background"
     >
       <div
-      class="w-full h-full absolute top-0 left-0 rounded-lg bg-cover bg-center duration-300 group-hover:scale-105"
+      class="w-full h-full absolute top-0 left-0 rounded-lg bg-cover bg-center duration-300 lg:group-hover:scale-105"
         [ngStyle]="{
           'background-image': getResponsiveBackgroundImage(
             mediaItems[0].thumbnail,
