--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,4 +1,4 @@
-<div class="flex items-center gap-4 h-[32px] bg-dark-blue">
+<div class="flex items-center gap-4 h-[32px] md:h-[50px] bg-dark-blue">
   <div class="pb-2 md:pb-0">
     <img
       src="assets/icon-search.svg"
@@ -7,7 +7,7 @@
     />
   </div>
   <div
-    class="h-full pb-[4px] w-full"
+    class="h-full pb-[4px] md:pt-2 w-full"
     [ngClass]="{ 'border-b-[1px] border-graish-blue': isTyping }"
   >
     <input
