--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,7 +2,7 @@
 <div class="flex flex-col lg:flex-row w-full min-h-screen relative md:p-[25px]">
   <!-- navigation for desktop and nav header for mobile -->
   <div
-    class="p-4 md:p-[27px] lg:w-[80px] bg-semi-dark-blue flex lg:flex-col items-center justify-between sticky md:rounded-[10px] top-0 left-0 w-full z-10"
+    class="p-4 md:p-[27px] lg:w-[80px] bg-semi-dark-blue flex lg:flex-col items-center justify-between sticky md:rounded-[10px] top-0 left-0 w-full z-50"
   >
     <div>
       <img
@@ -91,7 +91,9 @@
   <div
     class="px-4 mt-[10px] lg:mt-0 md:mt-[33px] lg:flex-1 lg:max-h-[calc(100vh-50px)] lg:overflow-y-auto custom-scroll"
   >
-    <div class="sticky top-[55px] md:top-[78px] lg:top-[-1px] z-20">
+    <div
+      class="sticky top-[56px] md:top-[78px] lg:top-[-1px] z-50 py-4 bg-dark-blue"
+    >
       <app-search></app-search>
     </div>
     <!-- main header search -->
