fixing some styling in the main component, for the non-trending movies

--- a/src/app/pages/home/main/main.component.html
+++ b/src/app/pages/home/main/main.component.html
@@ -14,7 +14,7 @@
   <p class="text-[20px] md:text-heading-l font-light text-pure-white">
     Recommended for you
   </p>
-  <div class="mt-4 flex flex-row justify-between flex-wrap">
+  <div class="mt-4 flex flex-row justify-between gap-y-4 md:gap-6 lg:gap-y-8 flex-wrap">
     <app-bookmark [isTrending]="false"></app-bookmark>
     <app-bookmark [isTrending]="false"></app-bookmark>
     <app-bookmark [isTrending]="false"></app-bookmark>
